# test

./: test.cpp
bit/: bit_test.cpp  bit_tt.cpp  feature.cpp  note.txt  version.cpp
command_line/: main.cpp
cpp_template/: example.cpp  example.h  main.cpp
defer/: counter.cpp  defer.cpp  note.txt
emplace_back_example/: main.cpp
enum_example/: main.cpp  make.sh
jni/: .HelloWorld.c.swp  HelloWorld.c  HelloWorldJNI.h  HelloWorldJNI.java  UserData.java  build_so.sh  clean.sh  gen_java_h.sh  note.txt  run_java.sh
libcpp/: main.cpp
macro_definition/: macro.cpp  macro.cpp.bak
mysql_helper/: mysql_helper.cpp  mysql_helper.h  sql_util.cpp  sql_util.h
myvector/: main.cpp
num_limits/: main.cpp
peer_id/: 1.cpp  main.cpp
read_string_from_file/: a.txt  main.cpp
real_start_id/: main.cpp
share_lib/: CMakeLists.txt  build_main.sh  do_cmake.sh  first.cpp  first.h  main.cpp  run.sh  second.cpp  second.h
share_lib_cpp/: CMakeLists.txt  build_first.sh  build_second.sh  first.cpp  first.h  main.cpp  run.sh  second.cpp  second.h
share_ptr_struct/: 1.cpp  main.cpp
sprintf/: main.cpp
stol/: main.cpp  main.cpp.bak
string_example/: main.cpp
time_diff/: get_now.cpp  main.cpp
ttl_example/: Makefile  db_with_ttl.cc  generate_sst.cc  make_config.mk  rocksdb_do_cmake.sh  simple_example.cc  sst_read_write.cc  sst_writer_reader.cc
ucontext/: example.c
uuid/: main.cpp  time_helper.h  uuid_generator.h
variant/: main.cpp  make.sh
